--- a/templates/includes/navigation.liquid
+++ b/templates/includes/navigation.liquid
@@ -9,5 +9,6 @@
 </h1>
 
 <ul class="menu">
-<a class="icon-library" href="http://www.nova.edu/library/main"> Library Events </a>
+	<a class="icon-library geek-font"> <span>sherman</span>library </a> /
+	<a class="icon-credit geek-font" href="http://www.nova.edu/library/main"> <span>library</span>card</a>
 </ul>
