--- a/public/styles/sass/geek.scss
+++ b/public/styles/sass/geek.scss
@@ -20,6 +20,7 @@ $pink: #f11440;
     font-style: normal; 
 }
 
+body { background: black; }
 /* ==================
  * Utilities */
 .geek-font { 
@@ -30,8 +31,6 @@ $pink: #f11440;
     color: lighten($pink, 9%);
   }
 }
-
-body { background: black; }
 
 .reveal {
   font-family: "Open Sans", sans-serif;
@@ -56,14 +55,47 @@ body { background: black; }
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eeeeee;
-  font-family: "Montserrat", Impact, sans-serif;
-  line-height: 0.9em;
+  font-family: $geek-font;
+  float: left;
+  line-height: 1.1;
   letter-spacing: -0.03em;
+  text-align: left;
   text-transform: none;
-  text-shadow: none; }
+  text-shadow: none; 
+  width: 70%;
+
+  a {
+    color: lighten($pink, 9%) !important;
+
+    &:hover, &:active {
+      color: lighten($pink, 20%) !important;
+    }
+  }
+
+}
 
 .reveal h1 {
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2); }
+
+  h2.h1 {
+    font-size: 3.77em;
+  }
+
+.title { line-height: 1.1 !important; }
+
+/* ==================
+ * Special Layouts
+ * ================== */
+#caps {
+  .reveal h1,
+  .reveal h2,
+  .reveal h3,
+  .reveal h4,
+  .reveal h5,
+  .reveal h6 {
+    width: 100%;
+  }
+}
 
 /*********************************************
  * LINKS
@@ -149,3 +181,119 @@ body { background: black; }
   -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+  /* ==================
+   * State Background
+   * ================== */
+  .geek--terry .reveal .state-background {
+    background: url('images/terry.png') no-repeat center right;
+    background-position: top right 2%;
+    background-size: 50%;
+    //background-size: 472px 700px;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--laura .reveal .state-background {
+    background: url('images/laura.png') no-repeat center right;
+    background-position: center right;
+    background-size: 50%;
+    -webkit-transition: none;
+    transition: none;
+    //background-size: 472px 700px;
+  }
+
+  .geek--billie .reveal .state-background {
+    background: url('images/billie.png') no-repeat center right;
+    background-position: center right -5%;
+    background-size: 50%;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--caps .reveal .state-background {
+    background: url('images/caps.png') no-repeat center right;
+    background-position: center bottom 20%;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--fighters .reveal .state-background {
+    background: url('images/fighters.png') no-repeat center right;
+    background-position: center bottom;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--lydia .reveal .state-background {
+    background: url('images/lydia.png') no-repeat center right;
+    background-position: center right;
+    background-size: 50%;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--marianne .reveal .state-background {
+    background: url('images/marianne.png') no-repeat center right;
+    background-position: top right -10%;
+    background-size: 50%;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--jeff .reveal .state-background {
+    background: url('images/jeff.png') no-repeat center right;
+    background-position: center right;
+    background-size: 50%;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--george .reveal .state-background {
+    background: url('images/george.png') no-repeat center right;
+    background-position: center right;
+    background-size: 60%;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--sheryl .reveal .state-background {
+    background: url('images/sheryl.png') no-repeat center right;
+    background-position: top right;
+    background-size: 50%;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--sam .reveal .state-background {
+    background: url('images/sam.png') no-repeat center right;
+    background-position: center right -10%;
+    background-size: 50%;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  .geek--posoff .reveal .state-background {
+    background: url('images/positiveoffset.png') no-repeat center right;
+    background-position: center right;
+    background-size: 50%;
+    -webkit-transition: none;
+    transition: none;
+  }
+
+  p.more {
+    float: left;
+    font-family: $geek-font;
+    font-size: .75em;
+    text-align: left;
+    text-indent: 1.5em;
+    width: 50%;
+
+    a {
+      color: lighten($pink, 9%) !important;
+
+      &:hover, &:active {
+        color: lighten($pink, 20%) !important;
+      }
+    }
+  }
